fixed overflow of image

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -84,8 +84,6 @@ form {
   border: 1px solid white !important;
 }
 
-
-
 .two-sections {
   display: flex;
 
@@ -163,6 +161,10 @@ span{
 
 #error-pop-up {
   visibility: hidden;
+}
+
+#contact-row {
+  margin: 0px !important;
 }
 
 
